--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-print": "^5.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "1.0.0",
     "gulp-sass": "4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tslint": "^8.1.3",
